# aminus

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
bindings/js/: Cargo.toml  README.md  debug-values.cjs  example.md  lib.rs  package-lock.json  package.json  tsconfig.json
bindings/js/examples/: TeamDPS.xlsx - Raiden National.csv  basic_test.ts  raiden_teamdps_calc.ts  solo_diluc_calc.ts  teamdps.ts
bindings/js/src/: artifact.rs  factory.rs  formulas.rs  index.ts  lib.rs  optimizers.d.ts  optimizers.rs  stat.rs  stat_table.rs  types.ts  utils.rs
bindings/js/tests/: artifact-builder.test.ts  optimizer.test.ts  parity.test.ts  solocalc.test.ts
bindings/py/: Cargo.toml  README.md  USAGE.md  aminus_py.py  lib.rs  pyproject.toml  test_bindings.py
bindings/py/examples/: artifact_optimization.py  basic_usage.py  improved_usage.py
bindings/py/src/: lib.rs  py_artifact.rs  py_formulas.rs  py_stat_table.rs  py_stattable.rs  py_utils.rs
data/: artifactMainStats.json  artifactSubStats.json  characters.json  weapons.json
docs/: GITHUB_PAGES_SETUP.md  README.md  docusaurus.config.ts  package.json
docs/blog/: 2025-01-27-buff-dependency-problem.md  authors.yml
docs/diagrams/: Drawing 2025-06-02 10.08.32.excalidraw.md
docs/docs/: index.md
docs/docs/Modules/: index.md
docs/docs/Modules/Model/: artifact.md  artifact_builder.md  character.md  index.md  operation.md  rotation.md  stat.md  statable.md  stattable.md  stattable_builder.md  weapon.md
docs/docs/Modules/data/: index.md  irminsul_adaptor.md
docs/docs/Modules/energy/: index.md
docs/docs/Modules/functions/: dmg_function.md  factories.md  formulas.md  index.md  optimizers.md  stat_factory.md
docs/docs/Modules/utils/: index.md  percentage.md
docs/internal/: requirements.md  specification.md
docs/internal/diagrams/: ogarchitecture.excalidraw
docs/manual/: docusaurus.config.ts  package-lock.json
docs/manual/docs/: index.md
docs/src/css/: custom.css
src/: lib.rs  main.rs
src copy/data/: irminsul_adaptor.rs  mod.rs
src copy/energy/: energy_formulas.rs  specification.rs
src copy/functions/: dmg_function.rs  factories.rs  mod.rs  stat_factory.rs
src copy/model/: artifact.rs  artifact_builder.rs  mod.rs  operation.rs  rotation.rs  stattable.rs  stattable_builder.rs
src copy/utils/: mod.rs
src/core/: artifact.rs  artifact_builder.rs  macros.rs  mod.rs  rotation.rs  stattable.rs  types.rs
src/data/: irminsul_adaptor.rs
src/energy/: energy_calculator.rs  mod.rs  specification.rs
src/engine/: executor.rs  mod.rs  node.rs
src/functions/: _factories.rs  dmg_function.rs  factories.rs  formulas.rs  mod.rs  optimizers.rs  stat_factory.rs
src/model/: artifact.rs  artifact_builder.rs  character.rs  computable.rs  irminsul_data_adaptor.rs  mod.rs  rotation.rs  stat.rs  statable.rs  stattable.rs  weapon.rs
src/utils/: mod.rs  percentage.rs  standardize.rs  testing.rs  testingutils.rs
tests/: README.md  artifact_builder.rs  artifact_builder_test.rs  factories_test.rs  formulas_test.rs  rotation_test.rs  solocalc_test.rs
