[package]
name = "aminus"
version = "0.1.0"
edition = "2021"
description = "genshin calculation library"
authors = ["Lambdev"]

[lib]
name = "aminus"
path = "src/lib.rs"

[features]
default = []
python-bindings = ["pyo3"]
js-bindings = ["wasm-bindgen"]

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json"] }
anyhow = "1.0" 
pyo3 = { version = "0.25.1", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }
