[package]
name = "aminus"
version = "0.1.0"
edition = "2021"
description = "genshin calculation library"
authors = ["Lambdev"]

[lib]
name = "aminus"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# [workspace]
# members = [
#     "bindings/js"
# ]

[features]
default = []
python-bindings = []

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0"
once_cell = "1.19"

# Optional dependencies that don't work with WebAssembly
tokio = { version = "1.45.0", features = ["full"], optional = true }
reqwest = { version = "0.12.15", features = ["json"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.45.0", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json"] }
