[package]
name = "aminus-js"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "aminus_js"

[dependencies]
aminus = { path = "../.." }
wasm-bindgen = "0.2.100"
js-sys = "0.3.70"
wasm-bindgen-futures = "0.4"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3.70"
features = [
  "console",
]

[features]
default = ["console_error_panic_hook"]
