[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "aminus-py"
description = "Python bindings for the Aminus Genshin Impact damage calculation library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["genshin", "damage", "calculator", "rust"]
authors = [
    {name = "Aminus Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"] 